# EIDOS

./: .gitignore  404.html  LICENSE  README.md  build.ps1  build.sh  bundle.ps1  bundle.sh  index.html  run.ps1  run.sh
rust/: Cargo.toml
rust/src/: color.rs  desmos.rs  image_ops.rs  lib.rs  math.rs  optimizer.rs  segmentation.rs  shapes.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  style.css
